<resources>
    <string name="app_name">Song</string>
    <string name="title">Song Title</string>
    <string name="singers">Singers</string>
    <string name="year">Year</string>
    <string name="stars">Stars</string>
    <string name="insert">INSERT</string>
    <string name="list">SHOW LIST</string>
    <string name="enterSong">Enter song title here</string>
    <string name="enterSinger">Enter singers' name here</string>
    <string name="enterYear">Enter year of release here</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>


</resources>